# check-domains

./: .gitignore  README.md  check_domains.py  config.yaml  example_domains.txt  pyproject.toml  run.sh  test.sh  test_check_domains.py
.github/workflows/: test.yml
